changed variables for auth page

--- a/WebsiteGym.Web/Views/Home/AuthPage.cshtml
+++ b/WebsiteGym.Web/Views/Home/AuthPage.cshtml
@@ -61,7 +61,7 @@
                               title = "Please enter your username",
                               type = "text",
                               value = "",
-                              id = "UserName",
+                              id = "RegisterUserName",
                               @class = "form-control",
                          })
                          </div>
@@ -73,7 +73,7 @@
                               title = "Please enter your email 'example@gmail.com'",
                               Type = "email",
                               value = "",
-                              id = "Email",
+                              id = "RegisterEmail",
                               @class = "form-control",
                          })
                          </div>
@@ -85,7 +85,7 @@
                               Type = "password",
                               title = "Please enter your password",
                               value = "",
-                              id = "Password",
+                              id = "RegisterPassword",
                               @class = "form-control",
                          })
                          </div>
@@ -111,7 +111,7 @@
                               title = "Please enter your username",
                               type = "text",
                               value = "",
-                              id = "UserName",
+                              id = "LoginUserName",
                               @class = "form-control",
                          })
                          </div>
@@ -123,7 +123,7 @@
                               Type = "password",
                               title = "Please enter your password",
                               value = "",
-                              id = "Password",
+                              id = "LoginPassword",
                               @class = "form-control",
                          })
                          </div>
