resolved an error

--- a/WebsiteGym.Web/Views/Checkout/TermsAndConditions.cshtml
+++ b/WebsiteGym.Web/Views/Checkout/TermsAndConditions.cshtml
@@ -69,9 +69,10 @@
             These Terms and Conditions are governed by the applicable laws of the Republic of Moldova, Chișinău. Any disputes will be resolved by the competent courts in Chișinău, MadGym.
         </p>
 
-        <div class="back-to-checkout-container" style="background-color: #007bff; padding: 10px 20px; margin-bottom: 30px; display: inline-block; border-radius: 5px;">
-            <a href="@Url.Action("CheckoutMembership", "Checkout")" style="color: white; text-decoration: none; font-size: 16px;">Back to Checkout</a>
+        <div class="back-to-home-container" style="background-color: #007bff; padding: 10px 20px; margin-bottom: 30px; display: inline-block; border-radius: 5px;">
+            <a href="@Url.Action("Index", "Home")" style="color: white; text-decoration: none; font-size: 16px;">Back to Home</a>
         </div>
+
 
 
 
