--- a/WebsiteGym.Web/Views/Home/AuthPage.cshtml
+++ b/WebsiteGym.Web/Views/Home/AuthPage.cshtml
@@ -48,102 +48,102 @@
 
                <!-- Left Side - Register Form (Hidden Initially) -->
                <div class="col-md-6 p-5 text-center form-container d-none" id="registerFormContainer">
-                    <h2 class="fw-bold">Join Us</h2>
-                    <p class="text-muted">Create an account</p>
-                    @using (Html.BeginForm("Register", "Account", FormMethod.Post))
-                    {
-                         @Html.AntiForgeryToken()
-                         @Html.ValidationSummary(true)
-                         <div class="mb-3">
-                              @Html.TextBoxFor(m => m.Register.UserName, new
-                         {
-                              placeholder = "Username",
-                              title = "Please enter your username",
-                              type = "text",
-                              value = "",
-                              id = "RegisterUserName",
-                              @class = "form-control",
-                         })
-                         </div>
+                   <h2 class="fw-bold">Join Us</h2>
+                   <p class="text-muted">Create an account</p>
+                   @using (Html.BeginForm("Register", "Account", FormMethod.Post))
+                   {
+                       @Html.AntiForgeryToken()
+                       @Html.ValidationSummary(true)
+                       <div class="mb-3">
+                           @Html.TextBoxFor(m => m.Register.UserName, new
+                           {
+                               placeholder = "Username",
+                               title = "Please enter your username",
+                               type = "text",
+                               value = "",
+                               id = "RegisterUserName",
+                               @class = "form-control",
+                           })
+                       </div>
 
-                         <div class="mb-3">
-                              @Html.TextBoxFor(m => m.Register.Email, new
-                         {
-                              placeholder = "E-mail",
-                              title = "Please enter your email 'example@gmail.com'",
-                              Type = "email",
-                              value = "",
-                              id = "RegisterEmail",
-                              @class = "form-control",
-                         })
-                         </div>
+                       <div class="mb-3">
+                           @Html.TextBoxFor(m => m.Register.Email, new
+                           {
+                               placeholder = "E-mail",
+                               title = "Please enter your email 'example@gmail.com'",
+                               Type = "email",
+                               value = "",
+                               id = "RegisterEmail",
+                               @class = "form-control",
+                           })
+                       </div>
 
-                         <div class="mb-3">
-                              @Html.TextBoxFor(m => m.Register.Password, new
-                         {
-                              placeholder = "Password",
-                              Type = "password",
-                              title = "Please enter your password",
-                              value = "",
-                              id = "RegisterPassword",
-                              @class = "form-control",
-                         })
-                         </div>
-                         <button type="submit" class="btn btn-primary w-100">REGISTER</button>
-                    }
+                       <div class="mb-3">
+                           @Html.TextBoxFor(m => m.Register.Password, new
+                           {
+                               placeholder = "Password",
+                               Type = "password",
+                               title = "Please enter your password",
+                               value = "",
+                               id = "RegisterPassword",
+                               @class = "form-control",
+                           })
+                       </div>
+                       <button type="submit" class="btn btn-primary w-100" id="RegisterSubmitBtn">REGISTER</button>
+                   }
 
-                    <p class="mt-3 text-muted">
-                         Already have an account? <a href="#" class="text-primary" id="loginLink">Login</a>
-                    </p>
+                   <p class="mt-3 text-muted">
+                       Already have an account? <a href="#" class="text-primary" id="loginLink">Login</a>
+                   </p>
                </div>
 
                <!-- Right Side - Login Form -->
                <div class="col-md-6 p-5 text-center form-container" id="loginFormContainer">
-                    <h2 class="fw-bold">Welcome</h2>
-                    <p class="text-muted">Login with Username</p>
-                    @using (Html.BeginForm("Login", "Account", FormMethod.Post))
-                    {
-                         @Html.AntiForgeryToken()
-                         <div class="mb-3">
-                              @Html.TextBoxFor(m => m.Login.UserName, new
-                         {
-                              placeholder = "Username",
-                              title = "Please enter your username",
-                              type = "text",
-                              value = "",
-                              id = "LoginUserName",
-                              @class = "form-control",
-                         })
-                         </div>
+                   <h2 class="fw-bold">Welcome</h2>
+                   <p class="text-muted">Login with Username</p>
+                   @using (Html.BeginForm("Login", "Account", FormMethod.Post))
+                   {
+                       @Html.AntiForgeryToken()
+                       <div class="mb-3">
+                           @Html.TextBoxFor(m => m.Login.UserName, new
+                           {
+                               placeholder = "Username",
+                               title = "Please enter your username",
+                               type = "text",
+                               value = "",
+                               id = "LoginUserName",
+                               @class = "form-control",
+                           })
+                       </div>
 
-                         <div class="mb-3">
-                              @Html.TextBoxFor(m => m.Login.Password, new
-                         {
-                              placeholder = "Password",
-                              Type = "password",
-                              title = "Please enter your password",
-                              value = "",
-                              id = "LoginPassword",
-                              @class = "form-control",
-                         })
-                         </div>
-                         <button type="submit" class="btn btn-primary w-100">LOGIN</button>
-                    }
+                       <div class="mb-3">
+                           @Html.TextBoxFor(m => m.Login.Password, new
+                           {
+                               placeholder = "Password",
+                               Type = "password",
+                               title = "Please enter your password",
+                               value = "",
+                               id = "LoginPassword",
+                               @class = "form-control",
+                           })
+                       </div>
+                       <button type="submit" class="btn btn-primary w-100" id="LoginSubmitBtn">LOGIN</button>
+                   }
 
 
-                    <p class="mt-3 text-muted">OR</p>
-                    <div class="d-flex justify-content-center gap-2">
-                         <button class="btn btn-outline-secondary"><i class="fab fa-google"></i></button>
-                         <button class="btn btn-outline-secondary"><i class="fab fa-facebook"></i></button>
-                         <button class="btn btn-outline-secondary"><i class="fab fa-apple"></i></button>
-                    </div>
+                   <p class="mt-3 text-muted">OR</p>
+                   <div class="d-flex justify-content-center gap-2">
+                       <button class="btn btn-outline-secondary"><i class="fab fa-google"></i></button>
+                       <button class="btn btn-outline-secondary"><i class="fab fa-facebook"></i></button>
+                       <button class="btn btn-outline-secondary"><i class="fab fa-apple"></i></button>
+                   </div>
 
-                    <p class="mt-3 text-muted">
-                         Don't have an account? <a href="#" class="text-primary" id="registerLink">Register Now</a>
-                    </p>
-                    <p class="mt-3 text-muted">
-                         Forgot password? <a class="text-primary" href="@Url.Action("ForgotPassword", "Account")">Reset Password</a>
-                    </p>
+                   <p class="mt-3 text-muted">
+                       Don't have an account? <a href="#" class="text-primary" id="registerLink">Register Now</a>
+                   </p>
+                   <p class="mt-3 text-muted">
+                       Forgot password? <a class="text-primary" href="@Url.Action("ForgotPassword", "Account")">Reset Password</a>
+                   </p>
                </div>
 
 
