added edit profile unique id added tests for another pages (not working)

--- a/WebsiteGym.Web/Views/Account/UserDashboard.cshtml
+++ b/WebsiteGym.Web/Views/Account/UserDashboard.cshtml
@@ -21,7 +21,8 @@
                               {
                                    <span>You don't have an active membership. <a href="@Url.Action("Membership", "Home")" class="text-white"><u>Get started today!</u></a></span>
                               }
-                         </p>
+                         </p> Edit Profile
+                              
                     </div>
                </div>
           </div>
@@ -62,7 +63,7 @@
                          </div>
 
                          <div class="mt-4">
-                              <a href="@Url.Action("EditUserProfile", "Account")" class="btn btn-primary btn-block">
+                              <a id="editProfileLink" href="@Url.Action("EditUserProfile", "Account")" class="btn btn-primary btn-block">
                                    <i class="fas fa-user-edit mr-1"></i> Edit Profile
                               </a>
                          </div>
