--- a/WebsiteGym.Web/Views/Shared/_Layout.cshtml
+++ b/WebsiteGym.Web/Views/Shared/_Layout.cshtml
@@ -73,7 +73,7 @@
                               <li class="nav-item"><a class="nav-link" href="@Url.Action("Services", "Home")">Services</a></li>
                               <li class="nav-item"><a class="nav-link" href="@Url.Action("Membership", "Home")">Membership</a></li>
                               <li class="nav-item"><a class="nav-link" href="@Url.Action("Contact", "Feedback")">Contact</a></li>
-                              <li class=" nav-item"><a class="btn btn-outline-light rounded-pill px-4" href="@Url.Action("UserDashboard", "Account")">@Session["UserName"]</a></li>
+                              <li class=" nav-item"><a id="userDashboardButtonDesktop" class="btn btn-outline-light rounded-pill px-4" href="@Url.Action("UserDashboard", "Account")">@Session["UserName"]</a></li>
                          </ul>
                     </div>
                </div>
@@ -91,7 +91,7 @@
                          <li class="nav-item"><a class="nav-link" href="@Url.Action("Services", "Home")">Services</a></li>
                          <li class="nav-item"><a class="nav-link" href="@Url.Action("Membership", "Home")">Membership</a></li>
                          <li class="nav-item"><a class="nav-link" href="@Url.Action("Contact", "Feedback")">Contact</a></li>
-                         <li class=" nav-item"><a class="btn btn-outline-light rounded-pill px-4" href="@Url.Action("UserDashboard", "Account")">@Session["UserName"]</a></li>
+                         <li class=" nav-item"><a id="userDashboardButtonMobile" class="btn btn-outline-light rounded-pill px-4" href="@Url.Action("UserDashboard", "Account")">@Session["UserName"]</a></li>
                     </ul>
                </div>
           </div>
