added ID for all links

--- a/WebsiteGym.Web/Views/Account/UserDashboard.cshtml
+++ b/WebsiteGym.Web/Views/Account/UserDashboard.cshtml
@@ -77,19 +77,19 @@
                     </div>
                     <div class="card-body">
                          <div class="list-group">
-                              <a href="@Url.Action("Membership", "Home")" class="list-group-item list-group-item-action d-flex align-items-center">
+                              <a id="membershipLink"href="@Url.Action("Membership", "Home")" class="list-group-item list-group-item-action d-flex align-items-center">
                                    <i class="fas fa-id-card text-primary mr-3"></i>
                                    <span>Membership Plans</span>
                               </a>
-                              <a href="@Url.Action("ForgotPassword", "Account")" class="list-group-item list-group-item-action d-flex align-items-center">
+                              <a id="forgotPasswordLink" href="@Url.Action("ForgotPassword", "Account")" class="list-group-item list-group-item-action d-flex align-items-center">
                                    <i class="fas fa-key text-primary mr-3"></i>
                                    <span>Change Password</span>
                               </a>
-                              <a href="@Url.Action("Contact", "Feedback")" class="list-group-item list-group-item-action d-flex align-items-center">
+                              <a id="contactLink" href="@Url.Action("Contact", "Feedback")" class="list-group-item list-group-item-action d-flex align-items-center">
                                    <i class="fas fa-comment text-primary mr-3"></i>
                                    <span>Send Feedback</span>
                               </a>
-                              <a href="@Url.Action("Logout", "Account")" class="list-group-item list-group-item-action d-flex align-items-center text-danger">
+                              <a id="logoutLink" href="@Url.Action("Logout", "Account")" class="list-group-item list-group-item-action d-flex align-items-center text-danger">
                                    <i class="fas fa-sign-out-alt me-3 text-danger"></i>
                                    <span>Log Out</span>
                               </a>
