--- a/WebsiteGym.Web/Views/Shared/_LayoutAdmin.cshtml
+++ b/WebsiteGym.Web/Views/Shared/_LayoutAdmin.cshtml
@@ -24,11 +24,11 @@
                <!-- Standard Navbar Links (Hidden on Mobile) -->
                <div class="collapse navbar-collapse d-none d-lg-flex" id="navbarNav">
                     <ul class="navbar-nav ms-auto">
-                         <li class="nav-item"><a class="nav-link" href="@Url.Action("About", "Home")">About</a></li>
-                         <li class="nav-item"><a class="nav-link" href="@Url.Action("Services", "Home")">Services</a></li>
-                         <li class="nav-item"><a class="nav-link" href="@Url.Action("Membership", "Home")">Membership</a></li>
-                         <li class="nav-item"><a class="nav-link" href="@Url.Action("Contact", "Home")">Contact</a></li>
-                         <li class="nav-item"><a class="btn btn-primary" href="@Url.Action("Login", "Home")">Login</a></li>
+                         <li class="nav-item"><a class="nav-link" id="aboutLink" href="@Url.Action("About", "Home")">About</a></li>
+                         <li class="nav-item"><a class="nav-link" id="servicesLink" href="@Url.Action("Services", "Home")">Services</a></li>
+                         <li class="nav-item"><a class="nav-link" id="membershipLink" href="@Url.Action("Membership", "Home")">Membership</a></li>
+                         <li class="nav-item"><a class="nav-link" id="contactLink" href="@Url.Action("Contact", "Home")">Contact</a></li>
+                         <li class="nav-item"><a class="btn btn-primary" id="loginLink" href="@Url.Action("Login", "Home")">Login</a></li>
                     </ul>
                </div>
           </div>
@@ -42,11 +42,11 @@
           </div>
           <div class="offcanvas-body">
                <ul class="list-unstyled">
-                    <li class="nav-item"><a class="nav-link" href="@Url.Action("About", "Home")">About</a></li>
-                    <li class="nav-item"><a class="nav-link" href="@Url.Action("Services", "Home")">Services</a></li>
-                    <li class="nav-item"><a class="nav-link" href="@Url.Action("Membership", "Home")">Membership</a></li>
-                    <li class="nav-item"><a class="nav-link" href="@Url.Action("Contact", "Home")">Contact</a></li>
-                    <li class="nav-item"><a class="btn btn-primary" href="@Url.Action("Login", "Home")">Login</a></li>
+                    <li class="nav-item"><a class="nav-link" id="aboutLink" href="@Url.Action("About", "Home")">About</a></li>
+                    <li class="nav-item"><a class="nav-link" id="servicesLink" href="@Url.Action("Services", "Home")">Services</a></li>
+                    <li class="nav-item"><a class="nav-link" id="membershipLink" href="@Url.Action("Membership", "Home")">Membership</a></li>
+                    <li class="nav-item"><a class="nav-link" id="contactLink" href="@Url.Action("Contact", "Home")">Contact</a></li>
+                    <li class="nav-item"><a class="btn btn-primary"  id="loginLink" href="@Url.Action("Login", "Home")">Login</a></li>
                </ul>
           </div>
      </div>
