--- a/WebsiteGym.Web/Views/Shared/_LayoutLogin.cshtml
+++ b/WebsiteGym.Web/Views/Shared/_LayoutLogin.cshtml
@@ -23,10 +23,10 @@
             <!-- Standard Navbar Links (Hidden on Mobile) -->
             <div class="collapse navbar-collapse d-none d-lg-flex" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link" href="@Url.Action("About", "Home")">About</a></li>
-                    <li class="nav-item"><a class="nav-link" href="@Url.Action("Services", "Home")">Services</a></li>
-                    <li class="nav-item"><a class="nav-link" href="@Url.Action("Membership", "Home")">Membership</a></li>
-                    <li class="nav-item"><a class="nav-link" href="@Url.Action("Contact", "Home")">Contact</a></li>
+                    <li class="nav-item"><a class="nav-link" id="aboutLink" href="@Url.Action("About", "Home")">About</a></li>
+                    <li class="nav-item"><a class="nav-link" id="serviceseLink" href="@Url.Action("Services", "Home")">Services</a></li>
+                    <li class="nav-item"><a class="nav-link" id="membershipLink" href="@Url.Action("Membership", "Home")">Membership</a></li>
+                    <li class="nav-item"><a class="nav-link" id="contactLink" href="@Url.Action("Contact", "Home")">Contact</a></li>
                 </ul>
             </div>
         </div>
@@ -40,10 +40,10 @@
         </div>
         <div class="offcanvas-body">
             <ul class="list-unstyled">
-                <li class="nav-item"><a class="nav-link" href="@Url.Action("About", "Home")">About</a></li>
-                <li class="nav-item"><a class="nav-link" href="@Url.Action("Services", "Home")">Services</a></li>
-                <li class="nav-item"><a class="nav-link" href="@Url.Action("Membership", "Home")">Membership</a></li>
-                <li class="nav-item"><a class="nav-link" href="@Url.Action("Contact", "Home")">Contact</a></li>
+                <li class="nav-item"><a class="nav-link" id="aboutLink" href="@Url.Action("About", "Home")">About</a></li>
+                <li class="nav-item"><a class="nav-link" id="serviceseLink" href="@Url.Action("Services", "Home")">Services</a></li>
+                <li class="nav-item"><a class="nav-link" id="membershipLink" href="@Url.Action("Membership", "Home")">Membership</a></li>
+                <li class="nav-item"><a class="nav-link" id="contactLink" href="@Url.Action("Contact", "Home")">Contact</a></li>
             </ul>
         </div>
     </div>
