changed ID's for user dashboard and admin dashboard and auth page to distinguish them

--- a/WebsiteGym.Web/Views/Shared/_Layout.cshtml
+++ b/WebsiteGym.Web/Views/Shared/_Layout.cshtml
@@ -28,7 +28,7 @@
                               <li class="nav-item"><a class="nav-link" id="servicesLink" href="@Url.Action("Services", "Home")">Services</a></li>
                               <li class="nav-item"><a class="nav-link" id="membershipLink" href="@Url.Action("Membership", "Home")">Membership</a></li>
                               <li class="nav-item"><a class="nav-link" id="contactLink" href="@Url.Action("Contact", "Feedback")">Contact</a></li>
-                              <li class=" nav-item"><a class="btn btn-outline-light rounded-pill px-4" id="adminDashboardButton" href="@Url.Action("AdminDash", "Admin")">ADMIN</a></li>
+                              <li class=" nav-item"><a class="btn btn-outline-light rounded-pill px-4" id="adminDashboardButtonDesktop" href="@Url.Action("AdminDash", "Admin")">ADMIN</a></li>
                          </ul>
                     </div>
                </div>
@@ -46,7 +46,7 @@
                          <li class="nav-item"><a class="nav-link" id="servicesLink" href="@Url.Action("Services", "Home")">Services</a></li>
                          <li class="nav-item"><a class="nav-link" id="membershipLink" href="@Url.Action("Membership", "Home")">Membership</a></li>
                          <li class="nav-item"><a class="nav-link" id="contactLink" href="@Url.Action("Contact", "Feedback")">Contact</a></li>
-                         <li class=" nav-item"><a class="btn btn-outline-light rounded-pill px-4" id="adminDashboardButton" href="@Url.Action("AdminDash", "Admin")">ADMIN</a></li>
+                         <li class=" nav-item"><a class="btn btn-outline-light rounded-pill px-4" id="adminDashboardButtonMobile" href="@Url.Action("AdminDash", "Admin")">ADMIN</a></li>
                     </ul>
                </div>
           </div>
@@ -73,7 +73,7 @@
                               <li class="nav-item"><a class="nav-link" id="servicesLink" href="@Url.Action("Services", "Home")">Services</a></li>
                               <li class="nav-item"><a class="nav-link" id="membereshipLink" href="@Url.Action("Membership", "Home")">Membership</a></li>
                               <li class="nav-item"><a class="nav-link" id="contactLink" href="@Url.Action("Contact", "Feedback")">Contact</a></li>
-                              <li class=" nav-item"><a id="userDashboardButton" class="btn btn-outline-light rounded-pill px-4" href="@Url.Action("UserDashboard", "Account")">@Session["UserName"]</a></li>
+                              <li class=" nav-item"><a id="userDashboardButtonDesktop" class="btn btn-outline-light rounded-pill px-4" href="@Url.Action("UserDashboard", "Account")">@Session["UserName"]</a></li>
                          </ul>
                     </div>
                </div>
@@ -91,7 +91,7 @@
                          <li class="nav-item"><a class="nav-link" id="servicesLink" href="@Url.Action("Services", "Home")">Services</a></li>
                          <li class="nav-item"><a class="nav-link" id="membereshipLink" href="@Url.Action("Membership", "Home")">Membership</a></li>
                          <li class="nav-item"><a class="nav-link" id="contactLink" href="@Url.Action("Contact", "Feedback")">Contact</a></li>
-                         <li class=" nav-item"><a id="userDashboardButton" class="btn btn-outline-light rounded-pill px-4" href="@Url.Action("UserDashboard", "Account")">@Session["UserName"]</a></li>
+                         <li class=" nav-item"><a id="userDashboardButtonMobile" class="btn btn-outline-light rounded-pill px-4" href="@Url.Action("UserDashboard", "Account")">@Session["UserName"]</a></li>
                     </ul>
                </div>
           </div>
@@ -119,7 +119,7 @@
                          <li class="nav-item"><a class="nav-link" id="servicesLink" href="@Url.Action("Services", "Home")">Services</a></li>
                          <li class="nav-item"><a class="nav-link" id="membereshipLink" href="@Url.Action("Membership", "Home")">Membership</a></li>
                          <li class="nav-item"><a class="nav-link" id="contactLink" href="@Url.Action("Contact", "Feedback")">Contact</a></li>
-                         <li class="nav-item"><a class="btn btn-primary" id="authPageLink" href="@Url.Action("AuthPage", "Home")">Login</a></li>
+                         <li class="nav-item"><a class="btn btn-primary" id="authPageLinkDesktop" href="@Url.Action("AuthPage", "Home")">Login</a></li>
                     </ul>
                </div>
           </div>
@@ -137,7 +137,7 @@
                     <li class="nav-item"><a class="nav-link" id="servicesLink" href="@Url.Action("Services", "Home")">Services</a></li>
                     <li class="nav-item"><a class="nav-link" id="membereshipLink" href="@Url.Action("Membership", "Home")">Membership</a></li>
                     <li class="nav-item"><a class="nav-link" id="contactLink" href="@Url.Action("Contact", "Feedback")">Contact</a></li>
-                    <li class="nav-item"><a class="btn btn-primary" id="authPageLink" href="@Url.Action("AuthPage", "Home")">Login</a></li>
+                    <li class="nav-item"><a class="btn btn-primary" id="authPageLinkMobile" href="@Url.Action("AuthPage", "Home")">Login</a></li>
                </ul>
           </div>
      </div>
