--- a/WebsiteGym.Web/Views/Account/ForgotPassword.cshtml
+++ b/WebsiteGym.Web/Views/Account/ForgotPassword.cshtml
@@ -21,7 +21,7 @@
                               <p class="text-muted">Enter your email address and we'll send you a link to reset your password.</p>
                          </div>
 
-                         <form id="sendResetLinkButton" action="@Url.Action("ForgotPassword", "Account")" method="post">
+                         <form action="@Url.Action("ForgotPassword", "Account")" method="post">
                               @Html.AntiForgeryToken()
 
                               <div class="form-group">
@@ -30,7 +30,7 @@
                               </div>
                               <div class="my-3"></div>
                               <div class="form-group mb-0">
-                                   <button id="sendResetLinkButton" type="submit" class="btn btn-primary btn-block">
+                                   <button id="resetPasswordLink" type="submit" class="btn btn-primary btn-block">
                                         <i class="fas fa-paper-plane mr-2"></i> Send Reset Link
                                    </button>
                               </div>
