added verify image src in common verified services page tab title and main title

--- a/WebsiteGym.Web/Views/Home/Index.cshtml
+++ b/WebsiteGym.Web/Views/Home/Index.cshtml
@@ -73,7 +73,7 @@
             </div>
         </section>
         <div class="text-center button-container">
-            <a id="servicesLink" href="@Url.Action("Services", "Home")" class="btn btn-primary btn-lg">See Services</a>
+            <a id="seeServicesLink" href="@Url.Action("Services", "Home")" class="btn btn-primary btn-lg">See Services</a>
         </div>
 
         <!-- Membership Section -->
