fixed benefit sections fixed contact button redirection

--- a/WebsiteGym.Web/Views/Services/PersonalTraining.cshtml
+++ b/WebsiteGym.Web/Views/Services/PersonalTraining.cshtml
@@ -43,9 +43,9 @@
         </ul>
     </section>
 
-    <section class="personal-training-cta" id="personalTrainingCta">
-        <p id="personalTrainingCtaText">Ready to start your fitness transformation?</p>
-        <a href="@Url.Action("Contact", "Home")" class="btn-cta" id="personalTrainingContactButton">
+    <section class="personal-training-cta" id="personalTrainingContact">
+        <p id="personalTrainingContactText">Ready to start your fitness transformation?</p>
+        <a href="@Url.Action("Contact", "Feedback")" class="btn-cta" id="personalTrainingContactButton">
             Contact Us to Book Your Session
         </a>
     </section>
