added all id locator from Group Programs page

--- a/WebsiteGym.Web/Views/Services/GroupPrograms.cshtml
+++ b/WebsiteGym.Web/Views/Services/GroupPrograms.cshtml
@@ -17,6 +17,7 @@
             <div class="col-md-6 mb-4 mb-md-0">
                 <img src="@Url.Content("~/Content/img/group-workouts-1-1-1024x536.jpg")" alt="Group Programs"
                      class="img-fluid rounded"
+                     id="groupProgramsImage"
                      style="max-height: 400px; object-fit: cover; width: 100%;">
             </div>
             <div class="col-md-6" id="groupProgramsDescription">
