--- a/WebsiteGym.Web/Views/Services/NutritionCoaching.cshtml
+++ b/WebsiteGym.Web/Views/Services/NutritionCoaching.cshtml
@@ -45,7 +45,7 @@
 
     <div class="nutrition-coaching-cta" id="nutritionCoachingContact">
         <p id="nutritionCoachingContactText">Ready to take control of your diet?</p>
-        <a href="@Url.Action("Contact", "Home")" class="btn-cta" id="nutritionCoachingContactButton">Book Your Consultation</a>
+        <a href="@Url.Action("Contact", "Feedback")" class="btn-cta" id="nutritionCoachingContactButton">Book Your Consultation</a>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
