--- a/WebsiteGym.Web/Views/Home/AuthPage.cshtml
+++ b/WebsiteGym.Web/Views/Home/AuthPage.cshtml
@@ -48,52 +48,53 @@
 
                <!-- Left Side - Register Form (Hidden Initially) -->
                <div class="col-md-6 p-5 text-center form-container d-none" id="registerFormContainer">
-                   <h2 class="fw-bold">Join Us</h2>
-                   <p class="text-muted">Create an account</p>
+                   <h2 id="joinUsText" class="fw-bold">Join Us</h2>
+                   <p id="createAccText" class="text-muted">Create an account</p>
                    @using (Html.BeginForm("Register", "Account", FormMethod.Post))
                    {
                        @Html.AntiForgeryToken()
                        @Html.ValidationSummary(true)
-                       <div class="mb-3">
+                       <div id="registerUsernameField" class="mb-3">
                            @Html.TextBoxFor(m => m.Register.UserName, new
                            {
                                placeholder = "Username",
                                title = "Please enter your username",
                                type = "text",
                                value = "",
-                               id = "RegisterUserName",
+                               id = "r+egisterUserName",
                                @class = "form-control",
                            })
                        </div>
 
-                       <div class="mb-3">
+                       <div id="registerEmailField" class="mb-3">
                            @Html.TextBoxFor(m => m.Register.Email, new
                            {
                                placeholder = "E-mail",
                                title = "Please enter your email 'example@gmail.com'",
                                Type = "email",
                                value = "",
-                               id = "RegisterEmail",
+                               id = "registerEmail",
                                @class = "form-control",
                            })
                        </div>
 
-                       <div class="mb-3">
+                       <div id="registerPasswordField" class="mb-3">
                            @Html.TextBoxFor(m => m.Register.Password, new
                            {
                                placeholder = "Password",
                                Type = "password",
                                title = "Please enter your password",
                                value = "",
-                               id = "RegisterPassword",
+                               id = "registerPassword",
                                @class = "form-control",
                            })
                        </div>
-                       <button type="submit" class="btn btn-primary w-100" id="RegisterSubmitBtn">REGISTER</button>
+                       <button type="submit" class="btn btn-primary w-100" id="registerSubmitBtn">REGISTER</button>
                    }
 
-                   <p class="mt-3 text-muted">
-                       Already have an account? <a href="#" class="text-primary" id="loginLink">Login</a>
+                   <p id="haveAccSubtext" class="mt-3 text-muted">
+                       Already have an account? 
+                       <a href="#" class="text-primary" id="loginLink">Login</a>
                    </p>
                </div>
 
@@ -111,7 +112,7 @@
                                title = "Please enter your username",
                                type = "text",
                                value = "",
-                               id = "LoginUserName",
+                               id = "loginUserName",
                                @class = "form-control",
                            })
                        </div>
@@ -123,7 +124,7 @@
                                Type = "password",
                                title = "Please enter your password",
                                value = "",
-                               id = "LoginPassword",
+                               id = "loginPassword",
                                @class = "form-control",
                            })
                        </div>
